[package]
name = "tc-fetch"
version = "0.5.0"
authors = ["James Graham <james@hoppipolla.co.uk>"]
description="Download taskcluster artifacts"
readme = "README.md"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "tcfetch"
path = "src/lib.rs"

[[bin]]
name = "tcfetch"
path = "src/main.rs"

[dependencies]
clap = "4"
regex = "1"
reqwest = {version="0.12", default-features=false, features=["blocking", "gzip", "rustls-tls"]}
thiserror = "2"
scoped_threadpool = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
zstd = "0.13.3"
