[package]
name = "tcfetch"
version = "0.5.1"
edition = "2021"
authors = ["James Graham <james@hoppipolla.co.uk>"]
description="Download taskcluster artifacts"
readme = "../README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tcfetch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.4"
tc-fetch = {path = "../"}