[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tcfetch"
description = "Download log files from Taskcluster CI systems"
author = "James Graham"
author_email = "james@hoppipolla.co.uk"
license = "BSD-3-Clause"
version = "0.3.2"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
